Fixed dark mode

--- a/common/common.scss
+++ b/common/common.scss
@@ -66,13 +66,14 @@ input[type="color"]:focus,
 // 	border: 2px solid var(--tertiary);
 // }
 //
+
 #create-topic {
 	color: var(--secondary);
 	background: $color-mint;
 	transition: all 0.3s linear;
 	border-radius: 10px;
-	/* text-transform: uppercase; */
-	border: 2px solid var(--tertiary);
+	text-transform: none;
+	border: 2px solid $color-mint;
 }
 
 // End fix dark mode
